spectec/test/elab/neg/parse-relation-body-must-be-notation.spectec
;; Relation body must be a notation type, not a plain type.

relation R: nat
